--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <title>Title</title>
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
     <script src="script.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
-<table id="grid" border="1px">
-</table>
-<button onclick="createGrid(5)">level 1</button>
-<button onclick="createGrid(6)">level 2</button>
-<button onclick="createGrid(8)">level 3</button>
+<div><button onclick="createGrid(4)" type="button" class="btn btn-success btn-lg">level 1</button>
+<button onclick="createGrid(6)" type="button" class="btn btn-info btn-lg">level 2</button>
+<button onclick="createGrid(8)" type="button" class="btn btn-primary btn-lg">level 3</button></div>
+<p><div id="table" ></div></p>
 </body>
 </html>
