--- a/index.html
+++ b/index.html
@@ -9,9 +9,15 @@
     <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
-<div><button onclick="createGrid(4)" type="button" class="btn btn-success btn-lg">level 1</button>
-<button onclick="createGrid(6)" type="button" class="btn btn-info btn-lg">level 2</button>
-<button onclick="createGrid(8)" type="button" class="btn btn-primary btn-lg">level 3</button></div>
-<p><div id="table" ></div></p>
+<div style="float: right">
+    <p><button onclick="createGrid(2)" type="button" class="btn btn-default btn-lg">level 1</button></p>
+    <p><button onclick="createGrid(4)" type="button" class="btn btn-default btn-lg">level 2</button></p>
+    <p><button onclick="createGrid(6)" type="button" class="btn btn-default btn-lg">level 3</button></p>
+    <p><button onclick="createGrid(8)" type="button" class="btn btn-default btn-lg">level 4</button></p>
+    <p><button onclick="createGrid(10)" type="button" class="btn btn-default btn-lg">level 5</button></p>
+    <p><button onclick="createGrid(12)" type="button" class="btn btn-default btn-lg">level 6</button></p>
+
+</div>
+<div id="table" align="center"></div>
 </body>
 </html>
